// Original file: proto/portfolio.proto


export interface PortfolioFundSectorWeightingEntry {
  'fundId'?: (string);
  'fundName'?: (string);
  'percentage'?: (number | string);
}

export interface PortfolioFundSectorWeightingEntry__Output {
  'fundId': (string);
  'fundName': (string);
  'percentage': (number);
}
